# fw-Bootloader

./: .gitignore  README.md
doc/: uboot 升级协议流程v1.1.2.md  uboot升级使用说明v1.1.2.md
pc_demo/: .gitignore  CMakeLists.txt  README.md  UBootSerialUpdateDemo.pro  hid_demo.cpp  hid_demo.sln  hid_demo.vcxproj  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  updatethread.cpp  updatethread.h
pc_demo/comm/: physerialthread.cpp  physerialthread.h
pc_demo/usb_hid/: hidapi.h  main.cpp
pc_demo/utils/: blockingqueue.h  utils.cpp  utils.h
update_tools/: main.cpp  mainwindow.ui
update_tools/comm/: commcmd.h
update_tools/tools/win-usb_hid/: UbootHid.pro  hidapi.lib
update_tools/utils/: blockingqueue.h
update_tools/win-uart/: UBootSerialUpdateDemo.pro  mainwindow.cpp  mainwindow.h  updatethread.cpp  updatethread.h
update_tools/win-uart/comm/: physerialthread.cpp  physerialthread.h
update_tools/win-uart/utils/: utils.cpp  utils.h
update_tools/win-usb_hid/: main.cpp
user_boot/: Makefile  default.workspace
user_boot/app/inc/: user.h
user_boot/app/src/: descriptor.c  flash_wp.c  hid.c  log_config.c  main.c  usb_config.c  usb_device.c  user.c
user_boot/cpu/bd19/: AC632N.cbp  Makefile  bd19_uboot.cbp  bd19_uboot.layout  uart.c
user_boot/cpu/br23/: AC635N_AC695X.cbp  Makefile  br23_uboot.cbp  br23_uboot.layout  uart.c
user_boot/cpu/br25/: AC636N_AC696X.cbp  Makefile  br25_uboot.cbp  delay.c  uart.c
user_boot/cpu/br28/: Makefile  br28_uboot.cbp  delay.c  uart.c
user_boot/cpu/br30/: AC697N_AC897N.cbp  Makefile  delay.c  (+2 more)
user_boot/tools/: make_prompt.bat
(+150 files in other folders)
